# titanium_mobile_windows

./: .clang-format  .gitignore  Gruntfile.js  Jenkinsfile  package-lock.json  package.json
Examples/KitchenSink/: CMakeLists.txt
Examples/KitchenSink/src/Assets/ui/common/: ApplicationTabGroup.js  MessageWindow.js
Examples/KitchenSink/src/i18n/es/: app.xml
Examples/KitchenSink_/: tiapp.xml
Examples/KitchenSink_/Resources/: app.js
Examples/KitchenSink_/i18n/en/: strings.xml
Examples/KitchenSink_/i18n/es/: strings.xml
Examples/NG/: CMakeLists.txt
Examples/NG/src/Assets/: app.js  titanium_settings.ini
Examples/NMocha/: CMakeLists.txt
Examples/NMocha/src/Assets/: ListViewItemTemplate.xaml  app.js  ti-mocha.js  ti.accelerometer.test.js  ti.app.properties.test.js  ti.app.windows.backgroundservice.test.js  ti.blob.test.js  ti.buffer.test.js  ti.builtin.test.js  ti.contacts.test.js  ti.database.test.js  ti.filesystem.test.js  ti.geolocation.test.js  ti.gesture.test.js  ti.network.httpclient.test.js  ti.platform.test.js  ti.require.test.js  ti.test.js  (+14 more)
Source/: CMakeLists.txt
Source/API/src/: API.cpp
Source/Accelerometer/src/: Accelerometer.cpp
Source/App/: CMakeLists.txt  CMakeLists.txt.bak  build_and_test.sh
Source/App/cmake/: TitaniumWindows_App_Config.cmake
Source/App/src/: App.cpp
Source/Filesystem/src/: Filesystem.cpp
Source/Geolocation/: CMakeLists.txt  build_and_test.sh
Source/Geolocation/cmake/: TitaniumWindows_Geolocation_Config.cmake
Source/Geolocation/src/: GeolocationModule.cpp
Source/Geolocation/test/: CMakeLists.txt
Source/Gesture/src/: Gesture.cpp  ShakeGestureHelper.cpp
Source/Global/src/: GlobalObject.cpp  GlobalString.cpp
Source/JavaScriptCoreCPP/src/: JSValue.cpp
Source/LayoutEngine/examples/: Main.cpp
Source/LayoutEngine/src/: Common.cpp  Composite.cpp  Element.cpp  Horizontal.cpp  Node.cpp  ParseProperty.cpp  Vertical.cpp
Source/LayoutEngine/test/: CompositeLayoutTest.cpp  HorizontaLayoutTest.cpp  PropertyParserTest.cpp
Source/Media/src/: Media.cpp
Source/Network/src/: HTTPClient.cpp  Network.cpp
Source/Platform/src/: DisplayCaps.cpp  Platform.cpp
Source/Sensors/src/: Geolocation.cpp  Gesture.cpp
Source/Ti/src/: API.cpp  AppModule.cpp  Contacts.cpp  DisplayCaps.cpp  Platform.cpp  TiModule.cpp
Source/Titanium/: CMakeLists.txt  build_and_test.sh
Source/Titanium/cmake/: TitaniumWindows_Config.cmake
Source/Titanium/src/: Blob.cpp  Blob.hpp  File.cpp  File.hpp  HTTPClient.cpp  TitaniumWindows.cpp  TitaniumWindows.hpp  stdafx.h
Source/Titanium/test/: TitaniumWindowsTests.cpp
Source/TitaniumKit/: CMakeLists.txt
Source/TitaniumKit/examples/: CMakeLists.txt  Main.cpp  NativeAPIExample.cpp  NativeAPIExample.hpp  NativeAccelerometerExample.cpp  NativeAccelerometerExample.hpp  NativeBlobExample.cpp  NativeBlobExample.hpp  NativeButtonExample.cpp  NativeButtonExample.hpp  NativeFileExample.cpp  NativeFileExample.hpp  NativeFilesystemExample.cpp  NativeFilesystemExample.hpp  NativeGestureExample.cpp  NativeGestureExample.hpp  NativeGlobalObjectExample.cpp  NativeGlobalObjectExample.hpp  NativeModuleExample.cpp  NativeModuleExample.hpp  NativePlatformDisplayCapsExample.cpp  NativePlatformDisplayCapsExample.hpp  NativePlatformExample.cpp  NativePlatformExample.hpp  NativeTiExample.cpp  NativeTiExample.hpp  NativeViewExample.cpp  NativeViewExample.hpp  NativeWebViewExample.cpp  NativeWebViewExample.hpp  NativeWindowExample.cpp  NativeWindowExample.hpp  NativeXMLExample.cpp  NativeXMLExample.hpp
Source/TitaniumKit/src/: API.cpp  Accelerometer.cpp  Analytics.cpp  App.cpp  Application.cpp  ApplicationBuilder.cpp  Blob.cpp  Codec.cpp  Contacts.cpp  DatabaseModule.cpp  FilesystemModule.cpp  Gesture.cpp  GlobalObject.cpp  GlobalString.cpp  Locale.cpp  MediaModule.cpp  Module.cpp  NetworkModule.cpp  PlatformModule.cpp  Stream.cpp  TiModule.cpp  UIModule.cpp  Utils.cpp  XML.cpp  analytics.js  stdafx.h
Source/TitaniumKit/test/: APITests.cpp  CMakeLists.txt  GlobalObjectTests.cpp  ModuleTests.cpp  NativeAccelerometerTests.cpp  NativeBlobTests.cpp  NativeButtonTests.cpp  NativeFileTests.cpp  NativeGestureTests.cpp  NativeListViewTests.cpp  NativePlatformTests.cpp  NativeTiTests.cpp  NativeViewTests.cpp  NativeWindowTests.cpp  NativeXMLTests.cpp  UITests.cpp
Source/UI/: CMakeLists.txt
Source/UI/src/: ActivityIndicator.cpp  AlertDialog.cpp  Button.cpp  Clipboard.cpp  EmailDialog.cpp  ImageView.cpp  Label.cpp  ListItem.cpp  ListSection.cpp  ListView.cpp  Picker.cpp  ProgressBar.cpp  ScrollView.cpp  SearchBar.cpp  Slider.cpp  Tab.cpp  TabGroup.cpp  TableView.cpp  TextArea.cpp  TextField.cpp  View.cpp  ViewBase.cpp  WebView.cpp  Window.cpp  WindowsModule.cpp  WindowsViewLayoutDelegate.cpp
Source/Utility/src/: Utility.cpp  stdafx.h
Source/XML/: CMakeLists.txt
Source/XML/cmake/: TitaniumWindows_XML_Config.cmake
Source/XML/src/: XML.cpp
Tools/Scripts/: convert_project_to_example.js  generate_cpp_headerfile.js  generate_project.js  index.js  package-lock.json  package.bat  package.json  setup.js  win10.bat  win81.bat
Tools/Scripts/module_generator/: generate.js
apidoc/: ti_win_yaml.js
cli/commands/: _build.js  _buildModule.js  _cleanModule.js
cli/commands/_build/: analytics.js  checks.js  compile.js  config.js  copy.js  encrypt.js  generate.js  initialize.js  logInfo.js  read.js  run.js  utils.js  validate.js  write.js
cli/hooks/: cert.js  package.js  wp-run.js  ws-run.js
cli/lib/: info.js  stub.js
templates/native_module/: CMakeLists.txt  build_and_test.sh
templates/native_module/cmake/: FindTitaniumWindows_Utility.cmake  TitaniumWindows_Global_Config.cmake
templates/native_module/include/TitaniumWindows/: GlobalObject.hpp  NativeModuleLoader.hpp
templates/native_module/src/: GlobalObject.cpp  NativeModuleLoader.cpp
templates/native_module/test/: CMakeLists.txt
tests/Resources/: app.js  fs.test.js  ti.codec.test.js  ti.filesystem.filestream.test.js  ti.network.httpclient.test.js  ti.network.test.js  ti.ui.tabgroup.test.js  ti.ui.view.test.js  ti.ui.window.test.js  ti.utils.test.js
(+209 files in other folders)
